# denizenspipeline

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  Singularity.def  __init__.py  cli.py  context.py  docker-compose.full.yml  docker-compose.yml  exceptions.py  mkdocs.yml  orchestrator.py  pyproject.toml  registry.py  run_fmriprep.sh
.github/workflows/: docker.yml  frontend-tests.yml
config/: defaults.py  loader.py  schema.py
core/: array_utils.py  datasequence.py  ridge.py  stimulus_utils.py  types.py
denizenspipeline/: cli.py  orchestrator.py  pipeline.py  registry.py  ui.py
denizenspipeline/config/: defaults.py  loader.py  schema.py
denizenspipeline/convert/: __init__.py  batch.py  cli.py  dicom_utils.py  heuristics.py  runner.py  validation.py
denizenspipeline/core/: alignment.py  array_utils.py  ridge.py  run_chart.py  run_summary.py  stimulus_utils.py  subject_db.py  types.py
denizenspipeline/plugins/: __init__.py  _decorators.py  _schema.py
denizenspipeline/plugins/analyzers/: variance_partition.py  weight_analysis.py
denizenspipeline/plugins/feature_extractors/: audio.py  basic.py  embeddings.py  histograms.py  visual.py
denizenspipeline/plugins/feature_sources/: cloud.py  compute.py  filesystem.py  grouped_hdf.py
denizenspipeline/plugins/models/: himalaya.py  ridge.py
denizenspipeline/plugins/preprocessing_steps/: concatenate.py  delay.py  mean_center.py  split.py  trim.py  zscore.py
denizenspipeline/plugins/preprocessors/: default.py  pipeline.py  pre_prepared.py
denizenspipeline/plugins/reporters/: flatmap.py  flatmap_mapped.py  histogram.py  metrics.py  webgl.py  weights.py
denizenspipeline/plugins/response_loaders/: __init__.py  bids.py  bling_hdf.py  cloud.py  local.py  multiphase_hdf.py  phact_hdf.py  preproc.py  prompt.txt  readers.py
denizenspipeline/plugins/stimulus_loaders/: audio.py  skip.py  textgrid.py  video.py
denizenspipeline/preproc/: __init__.py  cli.py  confounds.py  manifest.py  runner.py  validation.py
denizenspipeline/preproc/backends/: __init__.py  bids_app.py  custom.py  fmriprep.py
denizenspipeline/server/: __init__.py  app.py  ui_capture.py  ws.py
denizenspipeline/server/routes/: __init__.py  (+8 more)
docker/: Dockerfile.full  Dockerfile.slim  README.md  entrypoint.sh
docker/examples/: slurm_array.sh  slurm_preproc.sh  slurm_serve.sh  slurm_single.sh
docs/: config-reference.md  deployment.md  index.md
docs/devnotes/: README.md  run-name-mismatch.md  skip-stimulus-stage.md  textgrid-parsing.md
docs/errors/: 0001_mkr_shape_mismatch_trimming.yaml  0002_cupy_numpy_type_mismatch_scoring.yaml  0003_zero_features_wrong_delays_applied_default.yaml
docs/guide/: autoflatten.md  cli.md  configuration.md  dicom-to-bids.md  docker.md  installation.md  modules.md  pipeline-graph.md  plugins.md  post-preproc.md  preprocessing.md  python-api.md  quickstart.md  structural-qc.md  web-ui.md  workflows.md  working-dir.md
docs/plans/: multi-modal-stimulus-support.md  stackable-preprocessing-pipeline.md
docs/proposals/: postprocessing-analyze-stage.md
docs/reference/: config.md  defaults.md  modules.md  plugins.md
fmriflow/: __init__.py  cli.py  cli_bootstrap.py  context.py  exceptions.py  orchestrator.py  pipeline.py  registry.py  ui.py
fmriflow/builtin/: README.md  subjects.example.json
fmriflow/config/: defaults.py  loader.py  schema.py
fmriflow/convert/: __init__.py  batch.py  cli.py  dicom_utils.py  errors.py  heuristic_template.py  heuristics.py  manifest.py  runner.py  validation.py
fmriflow/core/: datasequence.py  mask_utils.py  paths.py  ridge.py  run_chart.py  stimulus_utils.py  subject_db.py  types.py
fmriflow/data/: subjects.json
fmriflow/modules/: __init__.py  _decorators.py
fmriflow/plugins/: __init__.py  _decorators.py
fmriflow/post_preproc/: __init__.py  graph.py  manifest.py  runner.py
fmriflow/preproc/: __init__.py  autoflatten.py  autoflatten_cli.py  cli.py  confounds.py  errors.py  manifest.py  nipype_log.py  runner.py  validation.py
fmriflow/qc/: __init__.py  structural_review.py
fmriflow/server/: __init__.py  app.py  ui_capture.py  ws.py
fmriflow/triage/: __init__.py  capture.py  cli.py  extractors.py  matcher.py  scrub.py  service.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend/e2e/: README.md
frontend/src/: App.tsx  main.tsx
heuristics/: glab_general.py  glab_general.yaml
plugins/: __init__.py
plugins/feature_extractors/: embeddings.py  histograms.py
plugins/feature_sources/: cloud.py  filesystem.py
plugins/models/: ridge.py
plugins/preprocessors/: default.py  pre_prepared.py
plugins/reporters/: flatmap.py  weights.py
plugins/response_loaders/: cloud.py  local.py
plugins/stimulus_loaders/: textgrid.py
scripts/: backfill_nipype_events.py
tests/: conftest.py
tests/test_config/: test_defaults.py  test_loader.py  test_schema.py
tests/test_core/: test_array_utils.py  test_datasequence.py  test_ridge.py  test_types.py
tests/test_infrastructure/: test_context.py  test_exceptions.py  test_registry.py
tests/test_integration/: test_pipeline.py
tests/test_modules/: test_feature_extractors.py  test_feature_sources.py  test_himalaya_models.py  test_models.py  test_preparers.py  test_reporters.py  test_response_readers.py
tests/test_plugins/: test_feature_extractors.py  test_feature_sources.py  test_himalaya_models.py  test_models.py  test_preparers.py  test_preprocessors.py  test_reporters.py  test_response_readers.py
tests/test_post_preproc/: test_graph.py  test_iter.py  test_literal_inputs.py  test_runner.py  test_stage_dispatch.py  test_subworkflow.py  test_workflow_store.py
tests/test_preproc/: test_autoflatten.py  test_fmriprep_params.py  test_manifest_discovery.py  test_nipype_log.py  test_nipype_log_pairing.py  test_node_outputs.py
tests/test_qc/: test_freeview_command.py  test_list_all_reviews.py  test_structural_qc_store.py
tests/test_scripts/: test_backfill_nipype_events.py
(+329 files in other folders)
